--- a/index.html
+++ b/index.html
@@ -1,11 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="styles.css">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="styles.css">
     <title>Awesome Page With CSS!</title>
 </head>
 <body>
+    <div class="header">
+        <div class="logo">Header Logo</div>
+        <div class="links">
+            <ul>
+                <li>link one</li>
+                <li>link due</li>
+                <li>link drei</li>
+            </ul>
+        </div>
+    </div>
+    <div class="content">
+      <div class="hero">
+ 
+      <div class="hero-main">This website is awesome
+        <div class="sub-awesome"> This website has some subtext that goes here uunder the main title. Ot¿s a smaller font and the color is lower contrast</div>  
+        <div class="button">
+            <button>Sign up</button>
+        </div>
+      </div>
+        <div class="image-aw">
+            HEREGOESTHEIMAGE
+          </div>
+      </div>
+
     
+
+    <div class="random"> Some random information
+        <div class="random-box">
+            <div class="box">first</div>
+            <div class="box">second</div>
+            <div class="box">third</div>
+            <div class="box">fourth</div>
+        </div>
+    </div>
+
+    <div class="inspiring">This is an insipiring quote, or a testimonial from a customer. Maybe it's justo filling up space or maybe people will actually read ir. Who knoes? All I knos is that it looks nice.</div>
+
+    <div class="action-call"> Call to action! It's time!
+        <div class="sub-call"></div>
+        <button>Sign up</button>
+    </div>
+</div>
+    <div class="footer"> Copyright © The Odin Project 2021</div>
+
 </body>
 </html>
