add header & first card

--- a/index.html
+++ b/index.html
@@ -8,49 +8,42 @@
     <title>Awesome Page With CSS!</title>
 </head>
 <body>
-    <div class="header">
-        <div class="logo">Header Logo</div>
-        <div class="links">
-            <ul>
-                <li>link one</li>
-                <li>link due</li>
-                <li>link drei</li>
-            </ul>
-        </div>
-    </div>
-    <div class="content">
-      <div class="hero">
- 
-      <div class="hero-main">This website is awesome
-        <div class="sub-awesome"> This website has some subtext that goes here uunder the main title. Ot¿s a smaller font and the color is lower contrast</div>  
+  
+
+<div class="header-card">
+
+   <div class="header">
+      <div class="logo">Header logo</div>
+      <div class="links">
+          <div>link uno</div>
+          <div>link dos</div>
+          <div>link tres</div>
+      </div>
+   </div>
+
+   <div class="card">
+
+     <div class="card-left">
+
+        <div class="awesome">This website is awesome</div>
+        <div class="sub-awesome">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
         <div class="button">
-            <button>Sign up</button>
-        </div>
-      </div>
-        <div class="image-aw">
-            HEREGOESTHEIMAGE
-          </div>
-      </div>
+           <button>Sign up</button>
+            </div>        
+     </div>
 
-    
+    <div class="card-right">
+      <div class="placeholder">This is a placeholder for an image</div>
+      </div> 
 
-    <div class="random"> Some random information
-        <div class="random-box">
-            <div class="box">first</div>
-            <div class="box">second</div>
-            <div class="box">third</div>
-            <div class="box">fourth</div>
-        </div>
-    </div>
+   </div>
 
-    <div class="inspiring">This is an insipiring quote, or a testimonial from a customer. Maybe it's justo filling up space or maybe people will actually read ir. Who knoes? All I knos is that it looks nice.</div>
 
-    <div class="action-call"> Call to action! It's time!
-        <div class="sub-call"></div>
-        <button>Sign up</button>
-    </div>
+
 </div>
-    <div class="footer"> Copyright © The Odin Project 2021</div>
+
+
+
 
 </body>
 </html>
