--- a/index.html
+++ b/index.html
@@ -38,9 +38,64 @@
 
    </div>
 
+</div>   
 
+
+
+<div class="random">
+
+    <div class="random-info">Some random information.</div>
+    <div class="info-box">
+       <div class="box">
+          <div class="image-box">image box</div>
+          <div class="subtext">this is some subtext under an illustration or image</div>
+       </div>
+       <div class="box">
+         <div class="image-box">image box</div>
+         <div class="subtext">this is some subtext under an illustration or image</div>
+       </div>
+       <div class="box">
+         <div class="image-box">image box</div>
+         <div class="subtext">this is some subtext under an illustration or image</div>
+       </div>
+       <div class="box">
+         <div class="image-box">image box</div>
+          <div class="subtext">this is some subtext under an illustration or image</div>
+      </div>
+    </div>
+</div>
+
+
+<div class="inspiring">
+
+   <div class="quote">This is an inspiring quote, or 
+      a testimonial from a customer. Maybe it's just filling
+      up space, or maybe people will actually read it. Who
+      knows? All I know is that it looks nice.
+      
+      <div class="author">-Thor, God of Thunder</div>
+
+   </div>
+   
+</div>
+
+<div class="action">
+
+   <div class="call">
+      <div class="left-call">
+         <div class="main-call">Call to action! It's time!</div>
+         <div class="sub-call"> Sign up for pur product by clicking over there!</div>
+      </div>
+      <div class="button">
+         <button class="second">Sign up</button>
+      </div>
+   </div>
 
 </div>
+
+
+
+
 
 
 
