--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400&display=swap" rel="stylesheet">
+
     <title>Awesome Page With CSS!</title>
 </head>
 <body>
@@ -13,11 +17,11 @@
 <div class="header-card">
 
    <div class="header">
-      <div class="logo">Header logo</div>
+      <div class="logo-holder"><img class="logo" src="header.jpg"></div>
       <div class="links">
-          <div>link uno</div>
-          <div>link dos</div>
-          <div>link tres</div>
+          <div><a href="https://www.instagram.com/_.bakingtime/">Repostería</a></div>
+          <div><a href="https://www.instagram.com/brendii_riios/">Personal</a></div>
+          <div><a href="https://www.linkedin.com/">Linkedin</a></div>
       </div>
    </div>
 
@@ -25,15 +29,15 @@
 
      <div class="card-left">
 
-        <div class="awesome">This website is awesome</div>
-        <div class="sub-awesome">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
+        <div class="awesome">Tortas y dulces personalizados!</div>
+        <div class="sub-awesome">Tortas, galletitas, cheesecakes, muffins, caramelos, bombones y más! Si es rico y dulce lo hacemos!</div>
         <div class="button">
-           <button>Sign up</button>
+           <button>Hacé tu pedido anticipado!</button>
             </div>        
      </div>
 
     <div class="card-right">
-      <div class="placeholder">This is a placeholder for an image</div>
+      <div class="placeholder"><img src="card-image.jpg" alt="Overview de tortas"></div>
       </div> 
 
    </div>
@@ -92,6 +96,8 @@
    </div>
 
 </div>
+
+<footer>Copyright © The Odin Project 2021</footer>
 
 
 
