--- a/index.html
+++ b/index.html
@@ -48,23 +48,23 @@
 
 <div class="random">
 
-    <div class="random-info">Some random information.</div>
+    <div class="random-info">Todo tipo de cosas dulces!</div>
     <div class="info-box">
        <div class="box">
-          <div class="image-box">image box</div>
-          <div class="subtext">this is some subtext under an illustration or image</div>
+          <div class="image-box"><img class="boxes" src="cookies.jpg" alt="galletitas"></div>
+          <div class="subtext">Las cookies más tiernas y riquísimas</div>
        </div>
        <div class="box">
-         <div class="image-box">image box</div>
-         <div class="subtext">this is some subtext under an illustration or image</div>
+         <div class="image-box"><img class="boxes" src="cupcakes.jpg" alt="magdalenas"></div>
+         <div class="subtext">Cupcakes personalizados y <i>deliciosizados</i></div>
        </div>
        <div class="box">
-         <div class="image-box">image box</div>
-         <div class="subtext">this is some subtext under an illustration or image</div>
+         <div class="image-box"><img class="boxes" src="torta.jpg" alt="torta"></div>
+         <div class="subtext">Tortas personalizadas a pedido y pastafrolas de batata</div>
        </div>
        <div class="box">
-         <div class="image-box">image box</div>
-          <div class="subtext">this is some subtext under an illustration or image</div>
+         <div class="image-box"><img class="boxes" src="lollypops.jpg" alt="lollypops"></div>
+          <div class="subtext">Y estos cositos que parecen helados pero no son pero están buenísimos</div>
       </div>
     </div>
 </div>
@@ -72,12 +72,10 @@
 
 <div class="inspiring">
 
-   <div class="quote">This is an inspiring quote, or 
-      a testimonial from a customer. Maybe it's just filling
-      up space, or maybe people will actually read it. Who
-      knows? All I know is that it looks nice.
+   <div class="quote">Las cosas dulces que hace brenda están buenísimas! Tanto que yo tenía diabetes pero cuando
+      probé las tortas tuve una remisión. Hay gente que dice que los sacó de la indigencia! 
       
-      <div class="author">-Thor, God of Thunder</div>
+      <div class="author">-Mirtha Legrand.</div>
 
    </div>
    
@@ -87,17 +85,17 @@
 
    <div class="call">
       <div class="left-call">
-         <div class="main-call">Call to action! It's time!</div>
-         <div class="sub-call"> Sign up for pur product by clicking over there!</div>
+         <div class="main-call">Qué estás esperando?! Apurate y hacé tu pedido!</div>
+         <div class="sub-call"> Pedí tu presupuesto haciendo click ya!</div>
       </div>
       <div class="button">
-         <button class="second">Sign up</button>
+         <button class="second">Presupuesto</button>
       </div>
    </div>
 
 </div>
 
-<footer>Copyright © The Odin Project 2021</footer>
+<footer>Copyright © The Odin Project 2021 - LoCo JoE</footer>
 
 
 
